# SelfNntC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
TestLab/CCppCodes/: CMakeLists.txt  main.cpp
TestLab/CCppCodes/layers/: activation_function.c  activation_function.h  batch_normalization.c  batch_normalization.h  math_operations.c  upsampling.c  upsampling.h
TestLab/CCppCodes/testcodes/: test_batch_normalization.h
TestLab/CCppCodes/testinclude/: BN1dtest.c  BN1dtest.h  divtest.c  divtest.h  nearestNtest.c  nearestNtest.h  normtest.c  normtest.h
TestLab/CCppCodes/testsrc/: utility_functions.h
TestLab/FinalTest/: CMakeLists.txt  main.cpp
TestLab/FinalTest/ai-cnn/io/: read_binary_weights.c
TestLab/FinalTest/ai-cnn/layers/: activation_function.c  activation_function.h  convolution.h  math_operations.c  math_operations.h
TestLab/FinalTest/image_tools/: imgUtils.h
TestLab/FinalTest/inputs/: face_1.ppm
TestLab/FinalTest/model_to_Test/: Resnet100_network.c  Resnet100_network.h  Resnet100_network_cleanup.c  network.c  network.h  network_cleanup.c
TestLab/FinalTest/sub_mobilefacenet_1/: network.c  network.h  network_cleanup.c  network_cleanup.h  network_initialization.c  network_initialization.h
TestLab/MergewithCpp/: CMakeLists.txt  main.cpp  new.txt
TestLab/MergewithCpp/ai-cnn/: utils.c  utils.h
TestLab/MergewithCpp/ai-cnn/layers/: activation_function.c  activation_function.h  concatenate.c  concatenate.h  convolution.c  convolution.h  math_operations.c
TestLab/MergewithCpp/image_tools/: read_binary_ref.h
TestLab/MergewithCpp/include/: faceAlignment.cpp  faceAlignment.h  fextractor.cpp  fextractor.h
TestLab/Resnet100/: CMakeLists.txt  main.cpp
TestLab/Resnet100/ai-cnn/: ai-cnn.h  parameters.h  utils.h
TestLab/Resnet100/model_to_Test/: Resnet100_network_initialization.c  Resnet100_network_initialization.h  dummy_input.c
TestLab/createLib/: CMakeLists.txt  main.cpp
TestLab/createLib/bui/: CMakeCache.txt  Makefile  cmake_install.cmake  createLib
TestLab/createLib/include/: area.cpp  area.h  circum.cpp  circum.h
TestLab/face_detection/: CMakeLists.txt  main.cpp
TestLab/face_detection/ai-cnn/: utils.c  utils.h
TestLab/face_detection/ai-cnn/io/: read_binary_weights.c  read_binary_weights.h
TestLab/face_detection/ai-cnn/layers/: batch_normalization.c  convolution.c  convolution.h  math_operations.h
TestLab/face_detection/image_tools/: imgUtils.cpp  imgUtils.h
TestLab/face_detection/mobile025_320/: mb25_Makefile  mb25_dummy_input.c  mb25_network.c  mb25_network.h  mb25_network_cleanup.c  mb25_network_cleanup.h  mb25_network_initialization.c  mb25_network_initialization.h  mb25_reference_input.c  posprocess.cpp
TestLab/face_detection/mobile025_320_0/: mb025_network.c  mb025_network.h  mb025_network_cleanup.c  mb025_network_cleanup.h  mb025_network_initialization.c  mb025_network_initialization.h  posprocess.cpp  posprocess.h
TestLab/mbfacenet/: CMakeLists.txt  main.cpp
TestLab/mbfacenet/image_tools/: read_binary_ref.c
TestLab/mbfacenet/model_to_Test/: mbfc_network.c  mbfc_network.h  mbfc_network_cleanup.c  mbfc_network_cleanup.h  mbfc_network_initialization.c  mbfc_network_initialization.h
TestLab/pythonCodes/: creatingTestModel.py  testModels.py
TestLab/pythonCodes/modelUtils/: mobileFaceNet.py
devLab/: CMakeLists.txt  main.cpp
devLab/CCppCodes/: CMakeLists.txt  main.cpp
devLab/CCppCodes/layers/: math_operations.h
devLab/CCppCodes/testsrc/: parameters.h
devLab/ModelFactory/: creatingTestModel.py  deconvolutionLayer.py  rec_output_  testBN1d.py  testModels.py
devLab/ModelFactory/modelUtils/: Buildupsampling.py  GlobalAveragePooling.py  convertMxNet2Onnx.py  mobileFaceNet.py  mobile_facenet_torch.py
devLab/fromOnnx/: ai_cnn.py  backend.py  compute_graph.py  constprop.py  generate_dummy.py  ir.py  memory_allocation.py  memory_manager.py  onnx_importer.py  onnx_to_ai_cnn.py
devLab/fromOnnx/code_templates/: ai_cnn_batchnorm_1d.c  ai_cnn_norm_l2.c  ai_cnn_prelu.c
devLab/fromOnnx_Resnet100/: ai_cnn.py  backend.py  constprop.py  onnx_to_ai_cnn.py  utils.py
devLab/fromOnnx_Resnet100/code_templates/: ai_cnn_div_by_scalar.c  ai_cnn_nearest_neighbour.c  ai_cnn_sigmoid_naive.c
devLab/include/: tutils.c  tutils.h  utility_functions.h
devLab/onnx_import/: ai_cnn.py  backend.py  constprop.py  generate_dummy.py  ir.py  onnx_to_ai_cnn.py
devLab/onnx_import/code_templates/: ai_cnn_concat_2d.c  ai_cnn_leakyrelu.c  ai_cnn_relu6.c
devLab/pythonCodes/: creatingTestModel.py
devLab/pythonCodes/modelUtils/: lenet.py  mobileFaceNet.py  utils.py
devLab/src/layers/: activation_function.c  activation_function.h  batch_normalization.c  fully_connected.h  math_operations.c  math_operations.h  upsampling.c  upsampling.h
fromOnnx/: ai_cnn.py  backend.py  constprop.py  onnx_to_ai_cnn.py  onnx_to_pico_cnn.py
fromOnnx/code_templates/: ai_cnn_div_by_scalar.c  ai_cnn_norm_l2.c  ai_cnn_prelu.c
fromOnnx/generated_code/: main.cpp
fromOnnx/generated_code/ai-cnn/: ai-cnn.h  utils.h
fromOnnx/generated_code/image_tools/: imgUtils.cpp
fromOnnx/generated_code/sim_lenet_003/: Makefile  dummy_input.c  network.c  network_initialization.c  network_initialization.h  reference_input.c
fromOnnx/generated_code/sim_lenet_4/: Makefile  dummy_input.c  network.c  network_cleanup.c  network_initialization.c  network_initialization.h  reference_input.c
fromOnnx/generated_code/sim_mobilefacenet_1/: Makefile  network.c  network_cleanup.c  network_initialization.c  network_initialization.h
fromOnnx/generated_code/sub_lenet_001/: Makefile  dummy_input.c  network.c  network_cleanup.c  network_initialization.c  network_initialization.h  reference_input.c
fromOnnx/generated_code/sub_mobilefacenet_1/: network.c  network_cleanup.c  network_initialization.c  network_initialization.h
history/: CMakeLists.txt
include/: test_activation_function.c  test_activation_function.h
pythonCodes/: testRelu.py
src/: ai-cnn.h
src/layers/: activation_function.c  activation_function.h  batch_normalization.h  math_operations.h
(+68 files in other folders)
